<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Motorcycle.HomeMotorcycleFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/action_bar_style"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:text="@string/M_add"
                android:textSize="30dp"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_welcome"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/welcome_box_style">

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:gravity=""
                android:text="@string/welcome"
                android:textColor="#fff"
                android:textSize="12pt" />

            <View
                android:layout_width="312dp"
                android:layout_height="1dp"
                android:layout_below="@id/text_welcome"
                android:layout_marginLeft="12dp"
                android:background="#fff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/text_welcome"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2pt"
                android:text="@string/key"
                android:textColor="#fff"
                android:textSize="8pt" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/categories_box_style">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="224dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="240dp"
                android:layout_weight="1"
                android:background="@drawable/image_style"
                android:src="@drawable/motorcycle" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="230dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/Matic"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/Beat"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/Vario"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/Scoopy"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="120dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="224dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/image_style"
                    android:src="@drawable/m1" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="220dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/Sport"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/R25"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/Verza"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/Vixion"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="225dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="224dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="240dp"
                android:layout_weight="1"
                android:background="@drawable/image_style"
                android:src="@drawable/m2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/Trail"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="24dp"
                    android:background="#fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/T1"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/T2"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/T3"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/profile_box_style"
            android:layout_marginTop="340dp"
            android:layout_marginLeft="250dp"
            android:text="@string/Details"
            android:textColor="#fff"
            />

        <Button
            android:id="@+id/btnAddMotorcycle"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/profile_box_style"
            android:layout_marginTop="340dp"
            android:layout_marginLeft="50dp"
            android:text="@string/AddM"
            android:textColor="#fff"
            />
    </RelativeLayout>

</RelativeLayout>