<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Customer.UpdateCustomerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/action_bar_style"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:text="@string/C_update"
                android:textSize="30dp"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/categories_box_style">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/profile_box_style">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/nav"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="140dp"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/n_customer"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressLayout"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="140dp"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/a_customer"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberLayout"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="140dp"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/pn_customer"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/citizenLayout"
                android:layout_marginTop="140dp"
                android:layout_marginLeft="140dp"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCitizen"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/citizen_customer"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/motorLayout"
                android:layout_marginTop="180dp"
                android:layout_marginLeft="140dp"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputMotor"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/m_customer"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rentLayout"
                android:layout_marginTop="220dp"
                android:layout_marginLeft="140dp"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputRent"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/d_customer"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/profile_box_style2"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="10dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/profile_box_style3"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="145dp"
        android:text="@string/edit"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/profile_box_style4"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="280dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        />
</RelativeLayout>