<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Motorcycle.UpdateMotorcycleFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/action_bar_style"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:text="@string/C_update"
                android:textSize="30dp"
                android:textColor="@color/white" />
        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="90dp"
            android:id="@+id/imageMotor"/>

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="240dp"
            android:layout_marginRight="150dp"
            android:layout_marginTop="175dp"
            android:background="@drawable/camera"
            android:id="@+id/camera"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/categories_box_style">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/profile_box_style">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/merkLayout"
                android:layout_width="450dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputMerk"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/Merk"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jenisLayout"
                android:layout_marginTop="65dp"
                android:layout_marginLeft="15dp"
                android:layout_width="550dp"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="center_vertical">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputJenis"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/Jenis"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kondisiLayout"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="15dp"
                android:layout_width="450dp"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputKondisi"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/Kondisi"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tahunLayout"
                android:layout_marginTop="170dp"
                android:layout_marginLeft="15dp"
                android:layout_width="450dp"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTahun"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/Tahun"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hargaLayout"
                android:layout_marginTop="220dp"
                android:layout_marginLeft="15dp"
                android:layout_width="450dp"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:layout_gravity="top|right">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/harga"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/image_style"
                    android:hint="@string/Harga"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/profile_box_style2"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="10dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/profile_box_style3"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="145dp"
        android:text="@string/edit"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/profile_box_style4"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="280dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        />
</RelativeLayout>